main.css
html {
	box-sizing: border-box;
	-ms-text-size-adjust: 100%;
	-webkit-text-size-adjust: 100%; 
	margin:0;
	padding:0;
	font-family: 'Quicksand', Helvetica, sans-serif;
	font-family: -apple-system, BlinkMacSystemFont, Helvetica, sans-serif;
	font-size:18px;
	color:#2e343b;
	color: rgba(0,0,0,.75);
	font-weight:200;
	width:100%;
	min-height:100%;
	display: flex;
	align-items: center;
}
*, 
*:before, 
*:after {
	box-sizing: inherit;
}
input, 
label,
a,
header {
	-webkit-transition: all 0.2s ease-in-out;
	-moz-transition:    all 0.2s ease-in-out;
	-ms-transition:     all 0.2s ease-in-out;
	-o-transition:      all 0.2s ease-in-out;
	transition:         all 0.2s ease-in-out;
}
a,
button,
input[type='radio'],
input[type='radio'] + label,
input[type='checkbox'],
input[type='checkbox'] + label {
	cursor: pointer;
}
input:focus, 
select:focus, 
textarea:focus, 
button:focus {
    outline: none;
}
a, button {
	font-family: 'Quicksand', Arial,  Helvetica, sans-serif;
	font-size:1em;
	text-decoration: none;
	white-space: nowrap;
	color:rgba(255,95,90,.75);
	font-weight:bold;
	border:none;
	padding:0;
	background-color: inherit;
}
a:hover,
button:hover {
	color:rgba(255,95,90,.95);
}
a:active,
button:active {
	color:rgba(255,95,90,.75);
}
h1 span,
h2 span,
h3 span {
	white-space: nowrap;
}

body {
	margin: 2em auto;
	padding:2em;
	border-radius: .25em;
	max-width:700px;
	box-shadow: 0px 0px 5em 0px rgba(0,0,0,0.1);
}
header {
	display:flex;
	justify-content: space-between;
	align-items: center;
}
header a {
	flex-grow: 1;
	line-height: 0;
}
header > div,
header > button {
	visibility: hidden;
	opacity: 0;
	text-align: right;
}
header button {
	font-size:2em;
	padding-left:.5em;
}
#ticker {
	font-weight:bold;
}
#updated {
	display: block;
	font-size:.75em;
}
main {}
header *,
section {
	-webkit-transition: all .5s ease;
	-moz-transition: all .5s ease;
	-ms-transition: all .5s ease;
	-o-transition: all .5s ease;
	transition: all .5s ease;
}
section {
	visibility: hidden;
	opacity: 0;
	max-height:1em;
	padding-bottom:2em;
}
section:last-of-type {
	padding-bottom:0;
}
h1,
h2,
h3 {
	/*font-family: -apple-system-headline, sans-serif*/
	font-weight:300;
}
h1 {
	font-size:2.5em;
}
h2 {
	font-size:1.5em;
}
h3 {
	font-size:1.25em;
}
h3 span:last-of-type {
	font-size:.75em;
	text-transform: uppercase;
	color:rgba(0,0,0,.5);
}
.logo {
	height:2em;
}
.loader {
	text-align:center;
	/*min-height:10em;*/
	-webkit-transition: all .5s ease;
	-moz-transition: all .5s ease;
	-ms-transition: all .5s ease;
	-o-transition: all .5s ease;
	transition: all .5s ease;
	max-height: 100em;
	
}
.loader svg {
	fill:rgba(255,95,90,.75);
	margin: 5em 0;
	-webkit-transition: all .5s ease;
	-moz-transition: all .5s ease;
	-ms-transition: all .5s ease;
	-o-transition: all .5s ease;
	transition: all .5s ease;
	max-height:3em;
}
.loaded .loader {
	max-height:0;
}
.loaded .loader svg {
	/*display:none;*/
	min-height: 0;
	visibility: hidden;
	max-height: 0;
	opacity: 0;
}
/*.loaded .loader svg {
	margin:0;
}*/
.loaded header > div,
.loaded header > button {
	visibility: visible;
	opacity: 1;
}
.loaded section {
	visibility: visible;
	opacity: 1;
	max-height:1000em;
}
.thomaBravo {
	background-color:#004972;
}

#stockData {
	display: flex;
	flex-wrap: wrap;
	align-items: baseline;
}
#stockData div > span {
	white-space: nowrap;
}
#stockData > div:first-of-type {
	display: flex;
	justify-content: center;
	width: 100%;
	align-items: center;
}
#current_price {}
#price_changes {
	display: flex;
	align-items: inherit;
}
#price_changes svg {
	font-size:2.5em;
	margin: 0 .5em;
}
.up {
	color:#008489;
}
.down {
	color:red;
}
#previous_weekday {
	color:inherit;
}

#market_cap,
#enterprise_value,
#revenues .multiple {
	display:inline-block;
	width:49%;
	padding: 0 1em;
	text-align:center;
}
#market_cap,
#enterprise_value {
	margin-bottom:1em;
}
#market_cap,
#revenues .multiple:first-of-type {
	border-right:1px solid rgba(0,0,0,.25);
}
#revenues {
	flex-grow: 1;
}

#ownership {
	display: flex;
	justify-content: space-between;
	align-items: center;
}
#ownership > div {
	font-size:1.5em;
}
#TB_shares_value {
	display:none;
}

#returns {
	display:flex;
	justify-content: space-between;
	align-items: center;
	flex-wrap: wrap;
	padding-bottom:0;
}
#returns h3 {
	width:100%;
	margin-top:0;
}
#returns h2 {
	margin:0;
}
#returns > div > span {
	font-size:.75em;
	text-transform: uppercase;
	font-weight:bold;
}
.MoM {
	color:rgba(0,0,0,.5);
}

#total_gain h2 {
	text-align:center;
	padding-top:1em;
	margin-top:1em;
	margin-bottom:0;
	border-top: 1px solid rgba(0,0,0,.25)
}
#total_gain h2 span {
	font-size:.75em;
	text-transform: uppercase;
	color: rgba(0,0,0,.5);
}
.disclaimer {
	text-align:center;
	font-size:.35em;
}


@media only screen and (max-width: 700px) {
	html {
		font-size:16px;
		align-items: flex-start;
	}
	body {
		margin:0;
		padding: 2em 1em;
		padding-left: env(safe-area-inset-left);
    	padding-right: env(safe-area-inset-right);
    	box-shadow:none;
	}
	header button {
		padding-left: .25em;
	}
	h3 span:last-of-type {
		display: block;
		font-size:.5em;
	}
	#stockData > div:first-of-type {
		align-items:center;
	}
	/*.fullscreen {
		height:100vh;
	}
	.fullscreen main {
		height:100%;
		display:flex;
		flex-wrap:wrap;
	}
	.fullscreen section {
		width:100%;
	}*/
}

@supports(padding: max(0px)) {
	@media only screen and (max-width: 700px) {
	    body {
	        padding-left: max(1em, env(safe-area-inset-left));
	        padding-right: max(1em, env(safe-area-inset-right));
	    }
	}
}

